Added key html elements and started k means page

--- a/templates/linreg.html
+++ b/templates/linreg.html
@@ -1,26 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>{% block title %}Linear Regression!{% endblock %}</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/static/css/style.css">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-            integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-            crossorigin="anonymous"></script>
-</head>
-<body>
-<h1>{% block name %}Linear Regression!{% endblock %}</h1>
+{% extends "gdBase.html" %}
+
+{% block title %}
+    Linear Regression
+{% endblock %}
+
+{% block name %}
+    Linear Regression!
+{% endblock %}
+
 {% block graph %}
-    <div id="graph" onclick='addPoint("r")'>
+    <div id="graph" onclick='addPoint()'>
         {{ graph | safe }}
     </div>
 {% endblock %}
-<div style="display: flex; flex-direction: column">
-    <p style="text-align: center">Perform Gradient Descent</p>
-    {% block gdButtons %}
-        <div id="gd_buttons">
+
+{% block gdButtons %}
+    <div id="gd_buttons">
             <button onclick="gradDesc(1, 'linreg-grad-desc')">1 iteration</button>
             <button onclick="gradDesc(5, 'linreg-grad-desc')">5 iterations</button>
             <button onclick="gradDesc(10, 'linreg-grad-desc')">10 iterations</button>
@@ -28,26 +23,4 @@
             <button onclick="gradDesc(100_000_000, 'linreg-grad-desc')">Until convergence</button>
             <button onclick="location.reload()">Clear</button>
         </div>
-    {% endblock %}
-</div>
-<div id='info'>
-    <p id='converged'>Run gradient descent until convergence</p>
-    <br/>
-
-    <p>Degree of line: </p>
-    <input type='number' id='num_of_degrees' value='1' min='1' max="2">
-    <br/>
-
-    {% block choose_class %}{% endblock %}
-
-    <p>Cost:</p>
-    <span id='cost'>0</span>
-    <br/>
-
-    <p>Equation: </p>
-    <span id="equation">0</span>
-</div>
-</body>
-</html>
-
-<script src="/static/js/script.js"></script>
+{% endblock %}
