--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,9 +2,24 @@
     font-family: 'Roboto', sans-serif;
 }
 
+body {
+    max-width: 1440px;
+    position: relative;
+    margin: auto;
+}
+
+.menu-links {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 10px 10px 0 0;
+
+}
+
 h1 {
     text-align: center;
     margin: 25px 0 0 0;
+    /*display: block;*/
 }
 
 p {
@@ -36,4 +51,19 @@ p {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.algoLinks {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 50px;
+    left: 10px;
+    height: 200px;
+    width: 300px;
+    font-size: 20px;
+}
+
+.algoLinks span {
+    font-size: 25px;
 }
