--- a/templates/linreg.html
+++ b/templates/linreg.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block graph %}
-    <div id="graph" onclick='addPoint()'>
+    <div id="graph" onclick='addPoint("r")'>
         {{ graph | safe }}
     </div>
 {% endblock %}
