--- a/templates/kmeans.html
+++ b/templates/kmeans.html
@@ -20,10 +20,8 @@
         {% block gdButtons %}
             <div id="gd_buttons">
                 <button onclick="kMeans(1)">1 iteration</button>
-{#                <button onclick="gradDesc(5, 'kmeans-grad-desc')">5 iterations</button>#}
-{#                <button onclick="gradDesc(10, 'kmeans-grad-desc')">10 iterations</button>#}
-{#                <button onclick="gradDesc(100, 'kmeans-grad-desc')">100 iterations</button>#}
-                <button onclick="gradDesc(100_000, 'kmeans-grad-desc')">Until convergence</button>
+                <button onclick="kMeans(100_000)">Until convergence</button>
+                <button onclick="reinitializeCentroids()">Reinitialize centroids</button>
                 <button onclick="location.reload()">Clear</button>
             </div>
         {% endblock %}
@@ -34,10 +32,6 @@
         <br/>
 
         <p>Number of Clusters:</p>
-{#        <div>#}
-{#            <input type="radio" id="oneCluster" name="clusters" value="1" checked>#}
-{#            <label>1</label>#}
-{#        </div>#}
         <div>
             <input type="radio" id="twoClusters" name="clusters" value="2" checked>
             <label>2</label>
@@ -49,6 +43,10 @@
         <div>
             <input type="radio" id="fourClusters" name="clusters" value="4">
             <label>4</label>
+        </div>
+        <div>
+            <input type="radio" id="fiveClusters" name="clusters" value="5">
+            <label>5</label>
         </div>
         <br/>
 
