Added info message indicating kmeans algorithm steps

--- a/templates/kmeans.html
+++ b/templates/kmeans.html
@@ -31,6 +31,9 @@
         <p id='converged'>Run K-Means until convergence</p>
         <br/>
 
+        <p id='next_step'>Initialize centroids</p>
+        <br/>
+
         <p>Number of Clusters:</p>
         <div>
             <input type="radio" id="twoClusters" name="clusters" value="2" checked>
