--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,6 +6,9 @@ body {
     max-width: 1440px;
     position: relative;
     margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .menu-links {
@@ -48,12 +51,13 @@ p {
     user-select: none;
 }
 
-#gd_buttons {
+#iter_buttons {
     display: flex;
-    justify-content: center
+    justify-content: center;
+    margin-bottom: 10px;
 }
 
-#gd_buttons button {
+#iter_buttons button {
     margin: 0 5px;
 }
 
@@ -83,4 +87,53 @@ p {
 
 .algoLinks span {
     font-size: 25px;
+}
+
+#info-modal {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    display: none;
+    background-color: rgb(0, 0, 0); /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+    overflow: auto;
+}
+
+#info-modal-content {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #fefefe;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 720px;
+    /*height: 480px;*/
+    border-radius: 10px;
+    box-shadow: black 1px 1px 10px;
+    padding: 30px;
+}
+
+h2 {
+    margin: 0 0 20px 0;
+}
+
+#modal-close {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 10px 20px;
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+#modal-close:hover,
+#modal-close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
 }
